use async db handlers

--- a/template.env
+++ b/template.env
@@ -8,3 +8,4 @@ DB_USER=debug
 DB_PASS=debug
 DB_NAME=secureapi_web
 ROLLBAR_TOKEN=
+DATABASE_URL=postgresql://debug:debug@postgres:5432/secureapi_web
