--- a/template.env
+++ b/template.env
@@ -1,8 +1,5 @@
-NATS_HOST=nats
-NATS_PORT=4222
+NATS_HOST=nats://admin:secureapigonnakickyourasses@nats:4222
 NATS_SUBJECT=test_suite.*.completed
-NATS_USER=admin
-NATS_PASS=secureapigonnakickyourasses
 DB_HOST=postgres
 DB_USER=debug
 DB_PASS=debug
