--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@
           - run:
               name: Build Docker image
               command: |
-                docker build -t $IMAGE_NAME:latest .
+                docker build -t $IMAGE_NAME:latest -t $IMAGE_NAME:$CIRCLE_SHA1 .
           - run:
               name: Archive Docker image
               command: docker save -o image.tar $IMAGE_NAME
@@ -43,6 +43,7 @@
               name: Publish Docker Image to Docker Hub
               command: |
                 echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+                docker push $IMAGE_NAME:$CIRCLE_SHA1
                 docker push $IMAGE_NAME:latest
     workflows:
       version: 2
