move natsUrl to values

--- a/chart/test-saver/templates/secret.yaml
+++ b/chart/test-saver/templates/secret.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: test-saver
 data:
-  nats-url: "nats://nats-client:4222"
+  nats-url: {{ .Values.natsUrl }}
   finished-subject: 'test_suite.*.completed'
   database-url: 'postgresql://secureapi:secureapi@db-my-postgresql:5432/secureapi'
   rollbar-token: 'not_set'
