remove hardcoded db_url

--- a/chart/test-saver/templates/secret.yaml
+++ b/chart/test-saver/templates/secret.yaml
@@ -5,5 +5,5 @@ metadata:
 data:
   nats-url: {{ .Values.natsUrl }}
   finished-subject: 'test_suite.*.completed'
-  database-url: 'postgresql://secureapi:secureapi@db-my-postgresql:5432/secureapi'
+  database-url: {{ .Values.db.Url }}
   rollbar-token: 'not_set'
